2009-07-23  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/x86_64/multiarch/init-arch.c (__init_cpu_features): Reset
	SSSE3 bit for Atoms.
	* sysdeps/x86_64/multiarch/strcpy.S: New need to perform Atom test
	here anymore.

	* posix/tst-rfc3484.c (do_test): Initialize entire sockaddr_in
	structure before copying it to avoid warning.
	* posix/tst-rfc3484-2.c (do_test): Likewise.
	* posix/tst-rfc3484-3.c (do_test): Likewise.

	[BZ #10416]
	* include/unistd.h: Make header file suitable for C++ test cases.
	Patch by Duncan Simpson <dps@simpson.demon.co.uk>.

	* sysdeps/unix/sysv/linux/i386/makecontext.S: Ensure we preserve the
	stack alignment in the exit code.

	* elf/dl-lookup.c (dl_lookup_x): The hashval for unique symbol can
	potentially be zero.

	* elf/tst-unique1.c: Extend test to check for unloading DSO with
	unique symbol definition.
	Patch by Jakub Jelinek.
	* elf/dl-lookup.c (do_lookup_x): When entering a new unique symbol,
	make sure the object with the definition cannot be unloaded.  Adjust
	a few types.
	* sysdeps/generic/ldsodefs.h (struct rtld_global): The map element in
	the unique symbol hash table should not be const.

2009-07-21  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/x86_64/multiarch/strstr.c: Minor cleanups.  Remove
	unnecesary variables.  Comment fixes.

2009-07-20  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/x86_64/multiarch/strstr.c [USE_AS_STRCASESTR] (STRSTR_SSE42):
	Use NONASCII_CASE information provided by the locale to determine
	whether optimized string load function can be used.  Minor cleanups.

2009-07-20  H.J. Lu  <hongjiu.lu@intel.com>

	* string/strcasestr.c (STRCASESTR): New macro.
	(__strcasestr): Renamed to ..
	(STRCASESTR): ...this.
	* string/strstr.c (STRSTR): New macro.
	(strstr): Renamed to ..
	(STRSTR): ...this.
	* sysdeps/x86_64/multiarch/Makefile (sysdep_routines): Add
	strstr-c strcasestr-c
	(CFLAGS-strstr.c): New.
	(CFLAGS-strcasestr.c): Likewise.
	* sysdeps/x86_64/multiarch/strcasestr-c.c: New file.